[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["Nobody_Nowhere <63668759+rand12345@users.noreply.github.com>"]
name = "first-test"
edition = "2021"
version = "0.1.1"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[features]
default = ["defmt", "kangoo_battery","byd", "ze50", "v65"] #"kangoo"] # "solax" # "pylontech"
v65 = []
defmt = []
byd = []
# pylontech = ["dep:pylontech_protocol"]
ze50 = ["dep:renault_zoe_ph2_battery"]
# kangoo = ["dep:kangoo_battery"]
# solax = ["dep:solax_can_bus"]
kangoo_battery = ["dep:kangoo_battery"]

[dependencies]
nb = "1"
embedded-hal = "0.2.7"
cortex-m = { version = "0.7.7",default-features = false, features = ["critical-section-single-core", "linker-plugin-lto"] } 
cortex-m-rt = "0.7.2"
defmt = {version = "0.3.2",default-features = false}
defmt-rtt = "0.4"
panic-probe = { version = "0.3",default-features = false, features = ["print-defmt"] }
panic-halt = "0.2"

embassy-sync = { version = "0.1.0",  default-features = false, features = ["defmt"] }
embassy-executor = { version = "0.1.0",  default-features = false, features = ["defmt", "integrated-timers"] } #
embassy-time = { version = "0.1.0",  default-features = false, features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", default-features = false,  features = [ "defmt", "nightly", "stm32f105rb", "unstable-pac", "memory-x", "time-driver-tim3"]  } #
embassy-futures = { version = "0.1.0" }

embedded-alloc = "0.5.0"
lazy_static = {version = "1",  default-features = false, features = ["spin_no_std"]}
kangoo_battery = {git = "https://github.com/rand12345/kangoo_battery.git", branch = "BmsErrors", optional = true}
# kangoo_battery = {path = "../../tmp/kangoo_battery", default-features = false,  optional = true} #, features = ["defmt"]}
solax_can_bus = {git = "https://github.com/rand12345/solax_can_bus.git", branch = "return-iterator", optional = true, features = ["defmt"]}
# solax_can_bus = {path = "../../tmp/solax_can_bus", default-features = false,  optional = true, features=["no_std", "range_checked"]} 
miniserde = {version = "0", default-features = false}
pylontech_protocol = {version = "0", optional = true}
renault_zoe_ph2_battery = {version = "0", optional = true}

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
# strip = true  # Automatically strip symbols from the binary.

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
[patch.crates-io]

# renault_zoe_ph2_battery = {git = "https://github.com/rand12345/renault_zoe_ph2_battery.git"}
renault_zoe_ph2_battery = {path = "../../tmp/renault_zoe_ph2_battery" }#{git = "https://github.com/rand12345/renault_zoe_ph2_battery.git"}
pylontech_protocol = {git = "https://github.com/rand12345/pylontech_protocol.git"}
# pylontech_protocol = {path = "../pylontech_protocol"}
# byd_protocol = {path = "~/tmp/byd_protocol"}
embassy-futures = {git = "https://github.com/embassy-rs/embassy.git"}
embassy-executor = {git = "https://github.com/embassy-rs/embassy.git"}
embassy-time = {git = "https://github.com/embassy-rs/embassy.git"}
embassy-sync = {git = "https://github.com/embassy-rs/embassy.git"}
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy.git"}
defmt = { git = "https://github.com/knurling-rs/defmt", tree = "defmt-v0.3.2" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", tree = "defmt-v0.3.2" }
defmt-test = { git = "https://github.com/knurling-rs/defmt", tree = "defmt-v0.3.2" }
panic-probe = { git = "https://github.com/knurling-rs/defmt", tree = "defmt-v0.3.2" }
serde-json-core = {git = "https://github.com/rust-embedded-community/serde-json-core.git"}
miniserde = {git = "https://github.com/dtolnay/miniserde.git"}
